add discovery-server